force-app/main/default/objects/Product2/fields/ATOS_Level__c.field-meta.xml
<CustomField>
    <fullName>ATOS_Level__c</fullName>
    <label>ATOS Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.1</fullName>
            </value>
            <value>
                <fullName>0.2</fullName>
            </value>
            <value>
                <fullName>0.3</fullName>
            </value>
            <value>
                <fullName>0.4</fullName>
            </value>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>0.6</fullName>
            </value>
            <value>
                <fullName>0.7</fullName>
            </value>
            <value>
                <fullName>0.8</fullName>
            </value>
            <value>
                <fullName>0.9</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>1.1</fullName>
            </value>
            <value>
                <fullName>1.2</fullName>
            </value>
            <value>
                <fullName>1.3</fullName>
            </value>
            <value>
                <fullName>1.4</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>1.6</fullName>
            </value>
            <value>
                <fullName>1.7</fullName>
            </value>
            <value>
                <fullName>1.8</fullName>
            </value>
            <value>
                <fullName>1.9</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>2.1</fullName>
            </value>
            <value>
                <fullName>2.2</fullName>
            </value>
            <value>
                <fullName>2.3</fullName>
            </value>
            <value>
                <fullName>2.4</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>2.6</fullName>
            </value>
            <value>
                <fullName>2.7</fullName>
            </value>
            <value>
                <fullName>2.8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>