force-app/main/default/objects/Product2/fields/Dewey_Number__c.field-meta.xml
<CustomField>
    <fullName>Dewey_Number__c</fullName>
    <label>Dewey Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>