force-app/main/default/objects/Product2/fields/Fiction_Nonfiction__c.field-meta.xml
<CustomField>
    <fullName>Fiction_Nonfiction__c</fullName>
    <label>Fiction Nonfiction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fiction</fullName>
            </value>
            <value>
                <fullName>Nonfiction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>