force-app/main/default/objects/Product2/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Big Book</fullName>
            </value>
            <value>
                <fullName>Board Book</fullName>
            </value>
            <value>
                <fullName>Hardcover</fullName>
            </value>
            <value>
                <fullName>Hardcover plus CD</fullName>
            </value>
            <value>
                <fullName>Interactive Perpetual License</fullName>
            </value>
            <value>
                <fullName>Interactive Responsive Audio</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Online Database Application Subscription</fullName>
            </value>
            <value>
                <fullName>Paperback</fullName>
            </value>
            <value>
                <fullName>Read-Along Fixed Layout ePub Subscription</fullName>
            </value>
            <value>
                <fullName>Teachers Guide</fullName>
            </value>
            <value>
                <fullName>eBook PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>