force-app/main/default/objects/Product2/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Allegories</fullName>
            </value>
            <value>
                <fullName>Biography</fullName>
            </value>
            <value>
                <fullName>Classic Fiction</fullName>
            </value>
            <value>
                <fullName>Current Events</fullName>
            </value>
            <value>
                <fullName>Fable</fullName>
            </value>
            <value>
                <fullName>Fairy Tale</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Folklore</fullName>
            </value>
            <value>
                <fullName>General Fiction</fullName>
            </value>
            <value>
                <fullName>Graphic Nonfiction</fullName>
            </value>
            <value>
                <fullName>Graphic Novel</fullName>
            </value>
            <value>
                <fullName>Historical Fiction</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Humor</fullName>
            </value>
            <value>
                <fullName>Informational</fullName>
            </value>
            <value>
                <fullName>Journals/Memoirs</fullName>
            </value>
            <value>
                <fullName>Legends</fullName>
            </value>
            <value>
                <fullName>Mystery</fullName>
            </value>
            <value>
                <fullName>Mythology</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Persuasive Letters and Text</fullName>
            </value>
            <value>
                <fullName>Poetry and Drama</fullName>
            </value>
            <value>
                <fullName>Procedural Text</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Realistic Fiction</fullName>
            </value>
            <value>
                <fullName>Science Fiction</fullName>
            </value>
            <value>
                <fullName>Sports Fiction</fullName>
            </value>
            <value>
                <fullName>Tall Tale</fullName>
            </value>
            <value>
                <fullName>Technical Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>