force-app/main/default/objects/Product2/fields/Imprint__c.field-meta.xml
<CustomField>
    <fullName>Imprint__c</fullName>
    <label>Imprint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cantata Learning</fullName>
            </value>
            <value>
                <fullName>Capstone Classroom</fullName>
            </value>
            <value>
                <fullName>Capstone Editions</fullName>
            </value>
            <value>
                <fullName>Capstone Press</fullName>
            </value>
            <value>
                <fullName>Capstone Young Readers</fullName>
            </value>
            <value>
                <fullName>Children&apos;s Library Resources</fullName>
            </value>
            <value>
                <fullName>Compass Point Books</fullName>
            </value>
            <value>
                <fullName>Heinemann</fullName>
            </value>
            <value>
                <fullName>Maupin House</fullName>
            </value>
            <value>
                <fullName>Pebble</fullName>
            </value>
            <value>
                <fullName>Picture Window Books</fullName>
            </value>
            <value>
                <fullName>Raintree</fullName>
            </value>
            <value>
                <fullName>Raintree Publishers</fullName>
            </value>
            <value>
                <fullName>Stone Arch Books</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>