force-app/main/default/objects/Product2/fields/Is_Hi_Lo__c.field-meta.xml
<CustomField>
    <fullName>Is_Hi_Lo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hi Lo</label>
    <type>Checkbox</type>
</CustomField>