force-app/main/default/objects/Product2/fields/ISBN10__c.field-meta.xml
<CustomField>
    <fullName>ISBN10__c</fullName>
    <label>ISBN10</label>
    <length>100</length>
    <type>Text</type>
</CustomField>