force-app/main/default/objects/Product2/fields/ISBN13__c.field-meta.xml
<CustomField>
    <fullName>ISBN13__c</fullName>
    <label>ISBN13</label>
    <length>100</length>
    <type>Text</type>
</CustomField>