force-app/main/default/objects/Product2/fields/IsKit__c.field-meta.xml
<CustomField>
    <fullName>IsKit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Kit</label>
    <type>Checkbox</type>
</CustomField>