force-app/main/default/objects/Product2/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6-Pack</fullName>
            </value>
            <value>
                <fullName>Add On Set</fullName>
            </value>
            <value>
                <fullName>Big Books</fullName>
            </value>
            <value>
                <fullName>Classroom Collection</fullName>
            </value>
            <value>
                <fullName>Classroom Library</fullName>
            </value>
            <value>
                <fullName>Complete Set</fullName>
            </value>
            <value>
                <fullName>Individual Title</fullName>
            </value>
            <value>
                <fullName>Interactive Kit</fullName>
            </value>
            <value>
                <fullName>Interactive Site</fullName>
            </value>
            <value>
                <fullName>Interactive Subscription</fullName>
            </value>
            <value>
                <fullName>Misc.</fullName>
            </value>
            <value>
                <fullName>Set</fullName>
            </value>
            <value>
                <fullName>Teachers Guide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>