force-app/main/default/objects/Product2/fields/Lexile__c.field-meta.xml
<CustomField>
    <fullName>Lexile__c</fullName>
    <label>Lexile</label>
    <length>30</length>
    <type>Text</type>
</CustomField>