force-app/main/default/objects/Product2/fields/Product_Availability__c.field-meta.xml
<CustomField>
    <fullName>Product_Availability__c</fullName>
    <label>Product Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active/In Stock</fullName>
            </value>
            <value>
                <fullName>Going Out of Print</fullName>
            </value>
            <value>
                <fullName>Not yet available</fullName>
            </value>
            <value>
                <fullName>Out of Print/Discontinued</fullName>
            </value>
            <value>
                <fullName>Out of stock</fullName>
            </value>
            <value>
                <fullName>Relicensing Under Consideration</fullName>
            </value>
            <value>
                <fullName>Replaced By New Edition</fullName>
            </value>
            <value>
                <fullName>Reprinting</fullName>
            </value>
            <value>
                <fullName>Special Order</fullName>
            </value>
            <value>
                <fullName>Under Contract Sell Off Period</fullName>
            </value>
            <value>
                <fullName>Web Based Product</fullName>
            </value>
            <value>
                <fullName>Withdrawn from sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>