force-app/main/default/objects/Product2/fields/Publication_Season__c.field-meta.xml
<CustomField>
    <fullName>Publication_Season__c</fullName>
    <label>Publication Season</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>