force-app/main/default/objects/Product2/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <type>TextArea</type>
</CustomField>