force-app/main/default/objects/Product2/fields/Set_Type__c.field-meta.xml
<CustomField>
    <fullName>Set_Type__c</fullName>
    <label>Set Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6 Pack</fullName>
            </value>
            <value>
                <fullName>Add On Set</fullName>
            </value>
            <value>
                <fullName>Bindup</fullName>
            </value>
            <value>
                <fullName>Classroom Collection</fullName>
            </value>
            <value>
                <fullName>Classroom Library</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Series</fullName>
            </value>
            <value>
                <fullName>Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>