force-app/main/default/objects/Product2/fields/Story_Character__c.field-meta.xml
<CustomField>
    <fullName>Story_Character__c</fullName>
    <label>Story Character</label>
    <length>200</length>
    <type>Text</type>
</CustomField>