force-app/main/default/objects/Product2/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>American Culture</fullName>
            </value>
            <value>
                <fullName>American History</fullName>
            </value>
            <value>
                <fullName>Anatomy</fullName>
            </value>
            <value>
                <fullName>Ancient History</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Architecture, Buildings</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Biography</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Careers</fullName>
            </value>
            <value>
                <fullName>Character Education</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Citizenship</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Drama and Theater</fullName>
            </value>
            <value>
                <fullName>Earth Science</fullName>
            </value>
            <value>
                <fullName>Ecology</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Fiction Reading</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>General Knowledge</fullName>
            </value>
            <value>
                <fullName>General Science</fullName>
            </value>
            <value>
                <fullName>General The Arts</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Geometry</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>