force-app/main/default/objects/Product2/fields/Text_Type__c.field-meta.xml
<CustomField>
    <fullName>Text_Type__c</fullName>
    <label>Text Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Argumentative/Persuasion</fullName>
            </value>
            <value>
                <fullName>Descriptive</fullName>
            </value>
            <value>
                <fullName>Informational Text</fullName>
            </value>
            <value>
                <fullName>Journal</fullName>
            </value>
            <value>
                <fullName>Literature: Drama</fullName>
            </value>
            <value>
                <fullName>Literature: Narrative</fullName>
            </value>
            <value>
                <fullName>Literature: Poetry</fullName>
            </value>
            <value>
                <fullName>Narrative Nonfiction</fullName>
            </value>
            <value>
                <fullName>Procedural Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>