force-app/main/default/objects/Product2/fields/US_Grade_Reading_level__c.field-meta.xml
<CustomField>
    <fullName>US_Grade_Reading_level__c</fullName>
    <label>US Grade Reading Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-1</fullName>
            </value>
            <value>
                <fullName>1-2</fullName>
            </value>
            <value>
                <fullName>1-3</fullName>
            </value>
            <value>
                <fullName>1-4</fullName>
            </value>
            <value>
                <fullName>2-2</fullName>
            </value>
            <value>
                <fullName>2-3</fullName>
            </value>
            <value>
                <fullName>2-4</fullName>
            </value>
            <value>
                <fullName>2-5</fullName>
            </value>
            <value>
                <fullName>3-3</fullName>
            </value>
            <value>
                <fullName>3-4</fullName>
            </value>
            <value>
                <fullName>3-5</fullName>
            </value>
            <value>
                <fullName>3-6</fullName>
            </value>
            <value>
                <fullName>3-7</fullName>
            </value>
            <value>
                <fullName>3-9</fullName>
            </value>
            <value>
                <fullName>4-12</fullName>
            </value>
            <value>
                <fullName>4-4</fullName>
            </value>
            <value>
                <fullName>4-5</fullName>
            </value>
            <value>
                <fullName>4-6</fullName>
            </value>
            <value>
                <fullName>4-7</fullName>
            </value>
            <value>
                <fullName>4-8</fullName>
            </value>
            <value>
                <fullName>4-9</fullName>
            </value>
            <value>
                <fullName>5-5</fullName>
            </value>
            <value>
                <fullName>5-6</fullName>
            </value>
            <value>
                <fullName>5-7</fullName>
            </value>
            <value>
                <fullName>5-8</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>6-11</fullName>
            </value>
            <value>
                <fullName>6-7</fullName>
            </value>
            <value>
                <fullName>6-8</fullName>
            </value>
            <value>
                <fullName>6-9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>